fix: background visibility

--- a/Quiz/styles/style.css
+++ b/Quiz/styles/style.css
@@ -1,5 +1,5 @@
 html {
-    background-image: url('./assets/background.avif');
+    background-image: url('/assets/background.avif');
     background-repeat: repeat;
     background-size: 20%;
 }  
